# Plasmid

./: Cargo.toml  README.md  justfile
crates/plasmid-cli/: Cargo.toml
crates/plasmid-cli/src/: main.rs
crates/plasmid-core/: Cargo.toml
crates/plasmid-core/src/: error.rs  lib.rs
crates/plasmid-core/src/config/: loader.rs  mock.rs  mod.rs  schema.rs
crates/plasmid-core/src/planner/: core.rs  error.rs  mod.rs  operation.rs  plan.rs
crates/plasmid-core/tests/: plan_tests.rs
crates/plasmid-fs/: Cargo.toml
crates/plasmid-fs/src/: filesystem.rs  lib.rs
crates/plasmid-fs/src/filesystem/: error.rs  mock.rs  mod.rs  operation.rs
crates/plasmid-fs/src/walker/: error.rs  mod.rs  walkdir.rs
crates/plasmid-fs/tests/: filesystem_tests.rs  walker_tests.rs
crates/plasmid-pkg/: Cargo.toml
crates/plasmid-pkg/src/: error.rs  lib.rs  manager.rs  runner.rs
crates/plasmid-pkg/src/managers/: apt.rs  brew.rs  kind.rs  manager.rs  mod.rs  registry.rs  winget.rs
crates/plasmid-pkg/src/runner/: commandrunner.rs  mock.rs  mod.rs
