[workspace]
members = ["crates/plasmid-cli", "crates/plasmid-core", "crates/plasmid-fs", "crates/plasmid-pkg"]
resolver = "3"

[workspace.dependencies]
# Internal dependencies
plasmid-cli = { version = "0.1.0", path = "crates/plasmid-cli" }
plasmid-core = { version = "0.1.0", path = "crates/plasmid-core" }
plasmid-fs = { version = "0.1.0", path = "crates/plasmid-fs" }
plasmid-pkg = { version = "0.1.0", path = "crates/plasmid-pkg" }

# External dependencies
anyhow = "1.0.102"
thiserror = "2.0.18"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
console = "0.16.2"

# Dev dependencies
tempfile = "3.25.0"

[workspace.lints.rust]
unstable_features = "warn"
unused = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_docs_in_private_items = "allow"
unwrap_used = "deny"
expect_used = "deny"