[package]
name = "plasmid-core"
version = "0.1.0"
edition = "2024"

[features]
mock = []

[dependencies]
plasmid-fs = { workspace = true }

thiserror = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
plasmid-core = { workspace = true, features = ["mock"] }
plasmid-fs = { workspace = true, features = ["mock"] }

tempfile = { workspace = true }

[lints]
workspace = true